@@ -17,7 +17,10 @@
 package com.example.zhaorui.dvdcollector.View;
 
 import android.app.AlertDialog;
+import android.app.FragmentManager;
 import android.content.DialogInterface;
+import android.content.Intent;
+import android.net.Uri;
 import android.os.Bundle;
 import android.util.Log;
 import android.view.Menu;
@@ -29,15 +32,25 @@ import android.widget.Button;
 import android.widget.LinearLayout;
 import android.widget.Spinner;
 import android.widget.TextView;
+import android.widget.Toast;
 
 import com.example.zhaorui.dvdcollector.Controller.FriendsController;
 import com.example.zhaorui.dvdcollector.Controller.InventoryController;
+import com.example.zhaorui.dvdcollector.Controller.MyHttpClient;
+import com.example.zhaorui.dvdcollector.Controller.TradeListController;
 import com.example.zhaorui.dvdcollector.Model.DVD;
 import com.example.zhaorui.dvdcollector.Model.Friend;
 import com.example.zhaorui.dvdcollector.Model.Friends;
+import com.example.zhaorui.dvdcollector.Model.Trade;
+import com.example.zhaorui.dvdcollector.Model.User;
 import com.example.zhaorui.dvdcollector.R;
+import com.google.gson.Gson;
+
+import org.apache.http.client.HttpClient;
 
 import java.util.ArrayList;
+import java.util.Observable;
+import java.util.Observer;
 
 /**
  * <p>
@@ -47,41 +60,68 @@ import java.util.ArrayList;
  * @author  Zhaorui Chen
  * @version 11/10/15
  */
-public class CounterTradeActivity extends BaseActivity {
-    private LinearLayout ll1;
-    private LinearLayout ll2;
-    private Spinner spinner;
-    private Button btnSendRequest;
+public class CounterTradeActivity extends BaseActivity implements Observer {
     private TextView textView1;
     private TextView textView2;
 
-    private FriendsController friendsController = new FriendsController();
-    private Friends friendsList = friendsController.getFriends();
-    private Friend owner = null;
+    private FriendsController fc = new FriendsController();
 
-    private InventoryController inventoryBorrowerController = new InventoryController(); //需要修改inventory controller
-    String[] borrowerDvdNames = inventoryBorrowerController.getAllNames();
-
-    private InventoryController inventoryOwnerController = new InventoryController();
+    //Inventory controller for borrower, in this case-->Device user
+    private InventoryController inventoryOwnerController;
     String[] ownerDvdNames;
 
-    //选择的dvd的缓存,可以当做intent传给下一个activity
-    ArrayList<DVD> ownerDvdBuffer = new ArrayList<>();
-    ArrayList<DVD> borrowerDvdBuffer = new ArrayList<>();
+    //Inventory controller for owner, in this case-->One friend(This friend is fixed)
+    private InventoryController inventoryBorrowerController;
+    String[] borrowerDvdNames;
 
-    ArrayList<Integer> borrowerDvdSelectedBuffer = new ArrayList<>();
-    ArrayList<Integer> ownerDvdSelectedBuffer = new ArrayList<>();
+    //Buffer for selecting dvds in the checkbox and radiobutton
+    ArrayList<String> borrowerDvdNameBuffer = new ArrayList<>();
+    String ownerDvdNameBuffer = null;
+    ArrayList<Integer> borrowerDvdIndexBuffer = new ArrayList<>();
+
+    //TradeList Controller for user(owner)
+    private TradeListController tradeListController = new TradeListController(User.instance().getTradeList());
+
+    private static String TAG = "CounterTradeActivity";
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
-        setContentView(R.layout.activity_start_trade);
-
+        setContentView(R.layout.activity_counter_trade);
+        TextView textView = (TextView)findViewById(R.id.tv_counter_trade_borrower);
         textView1 = (TextView)findViewById(R.id.tv_listing_names_borrower_dvd);
         textView2 = (TextView)findViewById(R.id.tv_listing_names_onwer_dvd);
+        LinearLayout ll1 = (LinearLayout)findViewById(R.id.ll_add_borrower_dvd_new_trade);
+        LinearLayout ll2 = (LinearLayout)findViewById(R.id.ll_add_owner_dvd_new_trade);
 
+        Intent i = getIntent();
+        String tradeStr = i.getStringExtra("trade");
+        Gson gson = new Gson();
+        // TODO: Need to avoid using model instance?
+        Trade trade = gson.fromJson(tradeStr,Trade.class);
+        final String friendName = trade.getBorrower();
 
-        ll1 = (LinearLayout)findViewById(R.id.ll_add_borrower_dvd_new_trade);
+        inventoryBorrowerController = new InventoryController();
+        inventoryBorrowerController.setInventory(fc.getByName(friendName).getInventory());
+        borrowerDvdNames = inventoryBorrowerController.getAllNames();
+
+        //get owner's information
+        //ownerHttpClient = new MyHttpClient(trade.getOwner());
+        inventoryOwnerController = new InventoryController();
+        ownerDvdNames = inventoryOwnerController.getAllNames();
+
+        // set default info with the declined trade
+        textView.setText(trade.getBorrower());
+        textView2.setText(trade.getOwnerItem());
+        for (String dvd:trade.getBorrowerItemList()){
+            textView1.setText(textView1.getText()+"; "+dvd);
+            borrowerDvdIndexBuffer.add(inventoryBorrowerController.indexOf(dvd));
+        }
+        textView1.setText(String.valueOf(trade.getBorrowerItemList()));
+        ownerDvdNameBuffer = trade.getOwnerItem();
+        borrowerDvdNameBuffer = trade.getBorrowerItemList();
+
+        // click to add dvds from borrower's inventory
         ll1.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
@@ -89,68 +129,74 @@ public class CounterTradeActivity extends BaseActivity {
             }
         });
 
-        ll2 = (LinearLayout)findViewById(R.id.ll_add_owner_dvd_new_trade);
-
-        // set the spinner showing all friends
-        spinner = (Spinner)findViewById(R.id.spinner_choose_owner);
-        ArrayAdapter<String> adapter = new ArrayAdapter<String>(this,
-                R.layout.spinner_item, friendsList);
-        adapter.setDropDownViewResource(R.layout.support_simple_spinner_dropdown_item);
-        spinner.setAdapter(adapter);
-        spinner.setOnItemSelectedListener(new AdapterView.OnItemSelectedListener() {
-            @Override
-            public void onItemSelected(AdapterView<?> parent, View view, int position, long id) {
-                // 这里需要初始化owner为一个friend///////////////////////////////////////////////////////此段仅在没有实现es的情况下适用
-                owner = friendsController.getByName(spinner.getSelectedItem().toString());
-                inventoryOwnerController.setInventory(owner.getInventory());
-                ownerDvdNames = inventoryOwnerController.getAllNamesFriend();
-                // in case choose another owner to trade with, clear all buffer
-                ownerDvdSelectedBuffer.clear();
-                ownerDvdBuffer.clear();
-                textView2.setText("");
-
-                ll2.setOnClickListener(new View.OnClickListener() {
-                    @Override
-                    public void onClick(View v) {
-                        if (owner != null) { // if have selected a friend to trade with
-                            ownerMultipleChoiceDialog();
-                        }
-                    }
-                });
-            }
-
-            @Override
-            public void onNothingSelected(AdapterView<?> parent) {
-
-            }
-        });
-
-        btnSendRequest = (Button)findViewById(R.id.btn_send_trade_request);
+        Button btnSendRequest = (Button)findViewById(R.id.btn_send_trade_request);
         btnSendRequest.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
-                Log.e("DVD numbers for borrow", String.valueOf(borrowerDvdBuffer.size()));
-                Log.e("DVD numbers for owner", String.valueOf(ownerDvdBuffer.size()));
+                if (ownerDvdNameBuffer !=null) {
+                    borrowerDvdNameBuffer.clear();
+                    for(int i:borrowerDvdIndexBuffer) {
+                        borrowerDvdNameBuffer.add(inventoryBorrowerController.getSharableInventory().get(i).getName());
+                    }
+                    Log.e(TAG, String.valueOf(borrowerDvdNameBuffer));
+                    Log.e(TAG, String.valueOf(borrowerDvdIndexBuffer));
+                    String tradeId =  String.valueOf(System.currentTimeMillis());// giving a new ID for the counter trade
+                    // add this trade to borrower's tradelist
+                    //NOTE: Upon sending the counter trade, the role of borrower and owner switched
+                    //Owner in the counter trade --> Borrower of the new trade request
+                    //vice versa.
+                    tradeListController.addTrade(
+                            User.instance().getProfile().getName(),//Now, treat user as borrower
+                            fc.getByName(friendName).getProfile().getName(),// treat friend as owner
+                            borrowerDvdNameBuffer,
+                            ownerDvdNameBuffer,
+                            "Current Outgoing",
+                            "Pending",
+                            tradeId);// save to user's tradelist
+
+                    //send trade to the owner(now--> friend)
+                    tradeListController.sendCounterTrade(User.instance().getProfile().getName(),
+                            fc.getByName(friendName).getProfile().getName(),
+                            borrowerDvdNameBuffer, ownerDvdNameBuffer, tradeId);
+
+                    Toast.makeText(CounterTradeActivity.this, "Trade has been sent to the borrower", Toast.LENGTH_SHORT).show();
+                    CounterTradeActivity.this.finish();
+                }else{
+                    showPromptDialog();
+                }
             }
         });
+
+        ll2.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                ownerSingleChoiceDialog();
+            }
+        });
+
+        tradeListController.addObserver(this);
+        inventoryOwnerController.addObserver(this);
+        inventoryBorrowerController.addObserver(this);
     }
 
-    @Override
-    public boolean onCreateOptionsMenu(Menu menu) {
-        // Inflate the menu; this adds items to the action bar if it is present.
-        getMenuInflater().inflate(R.menu.menu_start_trade, menu);
-        return true;
+
+    // A alert will be prompted if user haven't chosen a dvd from the owner
+    private void showPromptDialog() {
+        FragmentManager fm = getFragmentManager();
+        TradeRequestInvalidDialog newDialog = new TradeRequestInvalidDialog();
+        newDialog.show(fm, "abc");
     }
 
     // open a multiple choice dialog for the borrower
+    // borrower is always the device user in this activity
     public void borrowerMultipleChoiceDialog(){
         AlertDialog.Builder builder = new AlertDialog.Builder(CounterTradeActivity.this);
         builder.setTitle("Select DVDs");
 
-        // load checked items
+        // load already checked items
         boolean[] checked = new boolean[inventoryBorrowerController.getSharableInventory().size()];
         for(int i=0;i<checked.length;i++) {
-            if (borrowerDvdSelectedBuffer.contains(i)) {
+            if (borrowerDvdIndexBuffer.contains(i)) {
                 checked[i] = true;
             } else {
                 checked[i] = false;
@@ -161,17 +207,14 @@ public class CounterTradeActivity extends BaseActivity {
             @Override
             public void onClick(DialogInterface dialog, int which, boolean isChecked) {
                 if (isChecked) { // if check the item
-                    borrowerDvdBuffer.add(inventoryBorrowerController.getSharableInventory().get(which));
-                    borrowerDvdSelectedBuffer.add(which);
-                }else {// if un-check the item
-                    borrowerDvdBuffer.remove(inventoryBorrowerController.getSharableInventory().get(which));
-                    borrowerDvdSelectedBuffer.remove(new Integer(which));
+                    borrowerDvdIndexBuffer.add(which);
+                } else {// if un-check the item
+                    borrowerDvdIndexBuffer.remove(Integer.valueOf(which));
                 }
 
                 // write the selected dvds to the textview
                 textView1.setText("");
-                for(int index : borrowerDvdSelectedBuffer)
-                {
+                for (int index : borrowerDvdIndexBuffer) {
                     textView1.setText(textView1.getText() + borrowerDvdNames[index] + " ; ");
                 }
             }
@@ -183,54 +226,57 @@ public class CounterTradeActivity extends BaseActivity {
             }
         });
 
-
         builder.show();
     }
 
-    // open a multiple choice dialog for the borrower
-    public void ownerMultipleChoiceDialog(){
+    // open a single choice dialog for the owner
+    public void ownerSingleChoiceDialog(){
         AlertDialog.Builder builder = new AlertDialog.Builder(CounterTradeActivity.this);
-        builder.setTitle("Select DVDs");
+        builder.setTitle("Select one DVD");
 
-        // load checked items
-        boolean[] checked = new boolean[owner.getInventory().size()];
-        for(int i=0;i<checked.length;i++) {
-            if (ownerDvdSelectedBuffer.contains(i)) {
-                checked[i] = true;
-            } else {
-                checked[i] = false;
+        int checked = 0;
+        if (ownerDvdNameBuffer !=null){ // if have selected a dvd before
+            for (int i=0;i<ownerDvdNames.length;i++){
+                if(ownerDvdNames[i].equals(ownerDvdNameBuffer)){
+                    checked = i;
+                }
+            }
+        } else{ // if it's the first time selecting owner's dvd
+            try {
+                ownerDvdNameBuffer = inventoryOwnerController.getSharableInventory().get(checked).getName();
+            }catch (IndexOutOfBoundsException e){
+                e.printStackTrace();
+                ownerDvdNameBuffer = null;
             }
         }
 
-        builder.setMultiChoiceItems(ownerDvdNames, checked, new DialogInterface.OnMultiChoiceClickListener() {
+        builder.setSingleChoiceItems(ownerDvdNames, checked, new DialogInterface.OnClickListener() {
             @Override
-            public void onClick(DialogInterface dialog, int which, boolean isChecked) {
-                if (isChecked) { // if check the item
-                    ownerDvdBuffer.add(owner.getInventory().get(which));
-                    ownerDvdSelectedBuffer.add(which);
-                }else {// if un-check the item
-                    ownerDvdBuffer.remove(owner.getInventory().get(which));
-                    ownerDvdSelectedBuffer.remove(new Integer(which));
-                }
-
-                // write the selected dvds to the textview
-                textView2.setText("");
-                for(int index : ownerDvdSelectedBuffer)
-                {
-                    textView2.setText(textView2.getText() + ownerDvdNames[index] + " ; ");
-                }
+            public void onClick(DialogInterface dialog, int which) {
+                ownerDvdNameBuffer = inventoryOwnerController.getInventory().get(which).getName();
             }
         });
+
 
         builder.setPositiveButton("OK", new DialogInterface.OnClickListener() {
             @Override
             public void onClick(DialogInterface dialog, int which) {
+                // write the selected dvd to the textview
+                textView2.setText(ownerDvdNameBuffer);
+
             }
         });
 
-
         builder.show();
     }
+
+    @Override
+    public boolean onCreateOptionsMenu(Menu menu) {
+        // Inflate the menu; this adds items to the action bar if it is present.
+        getMenuInflater().inflate(R.menu.menu_start_trade, menu);
+        return true;
+    }
+
 
     @Override
     public boolean onOptionsItemSelected(MenuItem item) {
@@ -245,5 +291,8 @@ public class CounterTradeActivity extends BaseActivity {
         }
 
         return super.onOptionsItemSelected(item);
+    }
+
+    public void update(Observable ob,Object o){
     }
 }
